feat: replication service in mobile app
